--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,23 @@
-.App {
-  text-align: center;
+.textfield{
+  display: block !important;
+  width: 100% !important;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.Login-actions{
+  margin-top: 1em;
+  text-align: right;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.Login-background{
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-
-.title {
-  height: 150px;
-  width: 150px;
-  margin: 10px;
-  background: lightyellow;
-  float: left;
-  font-size: 11px;
-  text-align: left;
+.Signup-background{
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
 }
 
 .button-add{
